# AI-study-partner

./: .gitignore  LICENSE  PRD.md  README.md  SETUP.md
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt  test_model.py
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: bookshelf.py  chat.py  feynman.py  garden.py  health.py  materials.py  weakspots.py
backend/app/core/: embeddings.py  llm.py  prompts.py  rag_engine.py
backend/app/db/: client.py  schemas.py
backend/app/modes/: base.py  examiner.py  feynman.py  peer.py  tutor.py
backend/app/utils/: chunker.py  footnotes.py  indexer.py  logger.py  retry.py
backend/tests/: test_chunker.py  test_modes.py  test_rag.py
frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/.next/: app-build-manifest.json  build-manifest.json  react-loadable-manifest.json  routes-manifest.json  trace
frontend/.next/cache/: .tsbuildinfo
frontend/.next/server/: app-paths-manifest.json  edge-runtime-webpack.js  middleware-build-manifest.js  middleware-manifest.json  middleware-react-loadable-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
supabase/: README.md  seed.sql
supabase/migrations/: 001_init_schema.sql  002_pgvector_setup.sql  003_rls_policies.sql  004_triggers.sql  005_rpc_functions.sql  20250101000002_pgvector.sql  20250101000003_rls_policies.sql  20250101000004_triggers.sql  20250101000005_rpc_functions.sql
(+180 files in other folders)
