[project]
name = "ai-study-partner-backend"
version = "1.0.0"
requires-python = ">=3.11,<3.12"

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "UP", "B", "ASYNC", "S", "RET"]
ignore = ["S101"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
